deployments/argotest/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-bluegreen-active-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - rollout.fonn.es
    secretName: rollout-fonn-es-tls
  rules:
    - host: rollout.fonn.es
      http:
        paths:
          - backend:
              serviceName: rollout-bluegreen-active
              servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-bluegreen-staging-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - staging.rollout.fonn.es
    secretName: staging-rollout-fonn-es-tls
  rules:
    - host: staging.rollout.fonn.es
      http:
        paths:
          - backend:
              serviceName: rollout-bluegreen-preview
              servicePort: 80
